arreglo de imagenes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../Imagenes/Logo.png" alt="">
+        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
                 <h1>NFTasty</h1>
             </a>
             <nav>
@@ -46,7 +46,7 @@
         </section>
         <section class="imgIndex1">
             <div class="card grid-1">
-                <img src="./Imagenes/1.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/1.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="card grid-2">
-                <img src="./Imagenes/22436.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/22436.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -68,7 +68,7 @@
                 </div>
             </div>
             <div class="card grid-3">
-                <img src="./Imagenes/3.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/3.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <div class="card grid-4">
-                <img src="./Imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/C3QPAGIE3RBULNY6TPH7GGWBTQ.webp.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -92,7 +92,7 @@
         </section>
         <section class="imgIndex2">
             <div class="card grid-5">
-                <img src="./Imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div class="card grid-6">
-                <img src="./Imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/NFT-technikart-770x514.jpg.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="card grid-7">
-                <img src="./Imagenes/images.png.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/images.png.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -125,7 +125,7 @@
                 </div>
             </div>
             <div class="card grid-8">
-                <img src="./Imagenes/ixqzqi2iddz71.webp.png" width="300px" alt="NFT ape">
+                <img src="./imagenes/ixqzqi2iddz71.webp.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
 
@@ -147,7 +147,7 @@
         </ul>
         <div class="copy">
             <p class="logoabajo">Copyrright 2022 NFTasty</p>
-            <a href="../index.html"><img class="logoAbajo" src="../Imagenes/Logo.png" alt=""></a>
+            <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
 </body>
