--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../Imagenes/Logo.png" alt="">
+        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
         <h1>NFTasty</h1></a>
         <nav>
             <ul class="menu">
@@ -43,9 +43,9 @@
         </section>
         <section class="iconSocials">
             <div class="socials">
-                <a href="https://google.com/" target="_blank"><img class="fbIcon" src="../Imagenes/fb.png" alt="Facebook"></a>
-                <a href="https://google.com/" target="_blank"><img class="wpIcon" src="../Imagenes/whats.png" alt="Whatsapp"></a>
-                <a href="https://google.com/" target="_blank"><img class="instaIcon" src="../Imagenes/Instagram_icon.png" alt="Instagram"></a>
+                <a href="https://google.com/" target="_blank"><img class="fbIcon" src="../imagenes/fb.png" alt="Facebook"></a>
+                <a href="https://google.com/" target="_blank"><img class="wpIcon" src="../imagenes/whats.png" alt="Whatsapp"></a>
+                <a href="https://google.com/" target="_blank"><img class="instaIcon" src="../imagenes/Instagram_icon.png" alt="Instagram"></a>
             </div>
         </section>
     </main>
@@ -60,7 +60,7 @@
         </ul>
             <div class="copy">
                 <p class="logoabajo">Copyrright 2022 NFTasty</p>
-                <a href="../index.html"><img class="logoAbajo" src="../Imagenes/Logo.png" alt=""></a>
+                <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
     
