--- a/pages/vender.html
+++ b/pages/vender.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../Imagenes/Logo.png" alt="">
+        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
                 <h1>NFTasty</h1>
             </a>
             <nav>
@@ -34,7 +34,7 @@
                 <h2>Vender</h2>
                 <div class="tituloNFT">
                     <input type="text" name="titulo" id="" placeholder="Titulo de tu NFT">
-                    <img src="../Imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="" width="120">
+                    <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" alt="" width="120">
                     <input type="file"></input>
                 </div>
                 <div class="descripcionNft">
@@ -86,7 +86,7 @@
         </ul>
         <div class="copy">
             <p class="logoabajo">Copyrright 2022 NFTasty</p>
-            <a href="../index.html"><img class="logoAbajo" src="../Imagenes/Logo.png" alt=""></a>
+            <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
 </body>
