--- a/pages/mediosdepago.html
+++ b/pages/mediosdepago.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../Imagenes/Logo.png" alt="">
+        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
                 <h1>NFTasty</h1>
             </a>
             <nav>
@@ -37,19 +37,19 @@
         <section class="mediosDePago">
             <div class="bitcoinPaypal">
                 <div class="moneda">
-                    <a href="#vidTuto"><img src="../Imagenes/196543.png" alt="Bitcoin">
+                    <a href="#vidTuto"><img src="../imagenes/196543.png" alt="Bitcoin">
                         <P>Puedes cargar Bitcoin a tu cuenta desde una direccion personalizada, click aqui.</p>
                     </a>
                 </div>
-                <div class="moneda"><img src="../Imagenes/Paypal_2014_logo.png" alt="Paypal">
+                <div class="moneda"><img src="../imagenes/Paypal_2014_logo.png" alt="Paypal">
                     <P>Puedes pagar atravez de tu cuenta Paypal.</p>
                 </div>
             </div>
             <div class="cashCredit">
-                <div class="moneda Cash"><img src="../Imagenes/currency.png" alt="Cash">
+                <div class="moneda Cash"><img src="../imagenes/currency.png" alt="Cash">
                     <P>Puedes reservar tu compra y pagar despues en efectivo en cualquier punto de tu pais.</p>
                 </div>
-                <div class="moneda credit"><img src="../Imagenes/creditcard.png" alt="Crediycard">
+                <div class="moneda credit"><img src="../imagenes/creditcard.png" alt="Crediycard">
                     <p>Aceptamos pagos con cualquier tarjeta de credito de Visa, MasterCard y Americanexpress.</p>
                 </div>
             </div>
@@ -73,7 +73,7 @@
         </ul>
         <div class="copy">
             <p class="logoabajo">Copyrright 2022 NFTasty</p>
-            <a href="../index.html"><img class="logoAbajo" src="../Imagenes/Logo.png" alt=""></a>
+            <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
 </body>
