--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -13,8 +13,12 @@
 </head>
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
-        <h1>NFTasty</h1></a>
+        <div class="header">
+            <div class="logo">
+                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
+                    <h1>NFTasty</h1>
+                </a>
+            </div>
         <nav>
             <ul class="menu">
                 <li><a href="../index.html">Inicio</a></li>
