--- a/pages/mediosdepago.html
+++ b/pages/mediosdepago.html
@@ -10,14 +10,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="icon" href="../imagenes/Logo.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>NFTasty | Medios de pago</title>
 </head>
 
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
-                <h1>NFTasty</h1>
+        <div class="header">
+            <div class="logo">
+                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
+                    <h1>NFTasty</h1>
             </a>
+            </div>
             <nav>
                 <ul class="menu">
                     <li><a href="../index.html">Inicio</a></li>
@@ -35,21 +39,29 @@
             <p>Actualmente poseemos diferentes medios de pagos</p>
         </section>
         <section class="mediosDePago">
-            <div class="bitcoinPaypal">
+            <div class="bitcoinPaypal" data-aos="zoom-out-right"
+            data-aos-easing="linear"
+            data-aos-duration="600">
                 <div class="moneda">
                     <a href="#vidTuto"><img src="../imagenes/196543.png" alt="Bitcoin">
                         <P>Puedes cargar Bitcoin a tu cuenta desde una direccion personalizada, click aqui.</p>
                     </a>
                 </div>
-                <div class="moneda"><img src="../imagenes/Paypal_2014_logo.png" alt="Paypal">
+                <div class="moneda" data-aos="zoom-out-right"
+                data-aos-easing="linear"
+                data-aos-duration="600"><img src="../imagenes/Paypal_2014_logo.png" alt="Paypal">
                     <P>Puedes pagar atravez de tu cuenta Paypal.</p>
                 </div>
             </div>
-            <div class="cashCredit">
+            <div class="cashCredit" data-aos="zoom-out-left"
+            data-aos-easing="linear"
+            data-aos-duration="600">
                 <div class="moneda Cash"><img src="../imagenes/currency.png" alt="Cash">
                     <P>Puedes reservar tu compra y pagar despues en efectivo en cualquier punto de tu pais.</p>
                 </div>
-                <div class="moneda credit"><img src="../imagenes/creditcard.png" alt="Crediycard">
+                <div class="moneda credit" data-aos="zoom-out-left"
+                data-aos-easing="linear"
+                data-aos-duration="600"><img src="../imagenes/creditcard.png" alt="Crediycard">
                     <p>Aceptamos pagos con cualquier tarjeta de credito de Visa, MasterCard y Americanexpress.</p>
                 </div>
             </div>
@@ -76,6 +88,8 @@
             <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
