--- a/pages/vender.html
+++ b/pages/vender.html
@@ -10,14 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Vender</title>
 </head>
 
 <body>
     <header>
-        <div class="header"><a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
-                <h1>NFTasty</h1>
+        <div class="header">
+            <div class="logo">
+                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
+                    <h1>NFTasty</h1>
             </a>
+            </div>
             <nav>
                 <ul class="menu">
                     <li><a href="../index.html">Inicio</a></li>
@@ -29,7 +33,9 @@
             <!------------------------------------------------------------------------>
     </header>
     <main class="mainvender">
-        <section class="vender">
+        <section class="vender" data-aos="zoom-out-right"
+        data-aos-easing="linear"
+        data-aos-duration="600">
             <form class="formVender" action="" method="post">
                 <h2>Vender</h2>
                 <div class="tituloNFT">
@@ -59,10 +65,14 @@
                 </div>
             </form>
         </section>
-        <div class="tycVenderp">
+        <div class="tycVenderp" data-aos="zoom-in"
+        data-aos-easing="linear"
+        data-aos-duration="600">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tenetur hic odio amet quaerat, maxime sed necessitatibus praesentium. Reprehenderit nam laudantium veniam est porro corporis, repudiandae rerum amet architecto. Voluptates.</p>
         </div>
-        <section class="vistaPrevia">
+        <section class="vistaPrevia" data-aos="zoom-out-left"
+        data-aos-easing="linear"
+        data-aos-duration="600">
             <h2>Vista Previa</h2>
             <div class="card">
                 <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
@@ -89,6 +99,8 @@
             <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
             </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
 </body>
 
 </html>
