--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         data-aos-easing="linear"
         data-aos-duration="600">
             <div class="logo">
-                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
+                <a href="../index.html"><img class="logoMenu" src="./imagenes/Logo.png" alt="">
                     <h1>NFTasty</h1>
                 </a>
             </div>
