--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,65 +9,110 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
     <link rel="icon" href="../imagenes/Logo.png">
+    <!--boots-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>NFTasty | Contactanos</title>
 </head>
+
 <body>
     <header>
-        <div class="header">
-            <div class="logo">
-                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
-                    <h1>NFTasty</h1>
+        <nav class="navbar p-3 navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html">
+                    <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
+                    <h1 class="text-light">NFTasty</h1>
                 </a>
+                <button class="navbar-toggler btnNav" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end offcanvasBg" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
+                            class="d-inline-block align-text-top">
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
+                            <li class="nav-item">
+                                <a class="nav-link active text-light" aria-current="page"
+                                    href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./mediosdepago.html">Medios de pago</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./categorias.html">Categorias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./vender.html">Vender</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-        <nav>
-            <ul class="menu">
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="mediosdepago.html">Medios de pago</a></li>
-                <li><a href="categorias.html">Categorias</a></li>
-                <li><a href="vender.html">Vender</a></li>
-            </ul>
-        </nav></div>
+        </nav>
+    </header>
     <main class="mainContactanos">
         <section class="formContactanos">
             <form class="form" action="" method="post">
-            <div><input type="text" placeholder="  Nombre..." required class="name"></div> 
-            <!---->
-           <div> <input type="email" placeholder="  Correo electronico..." required class="mail"></div>
-            <!---->
-           <div> <textarea name="" id="" cols="30" rows="10" placeholder="Escribe aqui tu consulta, duda o lo que desees..." class="coment"></textarea></div>
-            <!---->
-            <div class="terminos"><p><input type="checkbox" name="" id="" required >Acepto los <a class="TyC" href="https://google.com/"  target="_blank">Terminos y Condiciones</a></p></div>
-            <!---->
-            <div ><button class="boton" type="submit">Enviar</button></div>
+                <div><input type="text" placeholder="  Nombre..." required class="name"></div>
+                <!---->
+                <div> <input type="email" placeholder="  Correo electronico..." required class="mail"></div>
+                <!---->
+                <div> <textarea name="" id="" cols="30" rows="10"
+                        placeholder="Escribe aqui tu consulta, duda o lo que desees..." class="coment"></textarea></div>
+                <!---->
+                <div class="terminos">
+                    <p><input type="checkbox" name="" id="" required>Acepto los <a class="TyC"
+                            href="https://google.com/" target="_blank">Terminos y Condiciones</a></p>
+                </div>
+                <!---->
+                <div><button class="boton" type="submit">Enviar</button></div>
 
-        </form>
+            </form>
         </section>
         <section class="descripcionp">
-            <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam veritatis inventore dolores aliquid, cumque, at vitae in aliquam beatae repudiandae officiis accusamus fuga nam? Necessitatibus tempore, inventore nemo ipsum quasi perferendis ad nesciunt dolorum cumque architecto ex in earum veniam.</p>
+            <p class="descripcion">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam veritatis
+                inventore dolores aliquid, cumque, at vitae in aliquam beatae repudiandae officiis accusamus fuga nam?
+                Necessitatibus tempore, inventore nemo ipsum quasi perferendis ad nesciunt dolorum cumque architecto ex
+                in earum veniam.</p>
         </section>
         <section class="iconSocials">
             <div class="socials">
-                <a href="https://google.com/" target="_blank"><img class="fbIcon" src="../imagenes/fb.png" alt="Facebook"></a>
-                <a href="https://google.com/" target="_blank"><img class="wpIcon" src="../imagenes/whats.png" alt="Whatsapp"></a>
-                <a href="https://google.com/" target="_blank"><img class="instaIcon" src="../imagenes/Instagram_icon.png" alt="Instagram"></a>
+                <a href="https://google.com/" target="_blank"><img class="fbIcon" src="../imagenes/fb.png"
+                        alt="Facebook"></a>
+                <a href="https://google.com/" target="_blank"><img class="wpIcon" src="../imagenes/whats.png"
+                        alt="Whatsapp"></a>
+                <a href="https://google.com/" target="_blank"><img class="instaIcon"
+                        src="../imagenes/Instagram_icon.png" alt="Instagram"></a>
             </div>
         </section>
     </main>
-    
+
     <footer class="pie">
         <ul class="listaFooter">
             <li><a href="#">Contactanos</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
-                <li><a href="#">Mision y vision</a></li>
-                <li><a href="#">Asesorias</a></li>
-                <li><a href="../index.html">Inicio</a></li>
+            <li><a href="#">Sobre nosotros</a></li>
+            <li><a href="#">Mision y vision</a></li>
+            <li><a href="#">Asesorias</a></li>
+            <li><a href="../index.html">Inicio</a></li>
         </ul>
-            <div class="copy">
-                <p class="logoabajo">Copyrright 2022 NFTasty</p>
-                <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
-            </div>
+        <div class="copy">
+            <p class="logoabajo">Copyrright 2022 NFTasty</p>
+            <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
+        </div>
     </footer>
-    
+    <!--AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+    <!--Boots-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
