--- a/pages/vender.html
+++ b/pages/vender.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta&family=Raleway&display=swap" rel="stylesheet">
+    <!--boots-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Vender</title>
@@ -16,26 +19,46 @@
 
 <body>
     <header>
-        <div class="header">
-            <div class="logo">
-                <a href="../index.html"><img class="logoMenu" src="../imagenes/Logo.png" alt="">
-                    <h1>NFTasty</h1>
-            </a>
+        <nav class="navbar p-3 navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/index.html">
+                    <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
+                    <h1 class="text-light">NFTasty</h1>
+                </a>
+                <button class="navbar-toggler btnNav" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end offcanvasBg" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo"
+                            class="d-inline-block align-text-top">
+                        <button type="button" class="btn-close btnoff" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
+                            <li class="nav-item">
+                                <a class="nav-link active text-light" aria-current="page"
+                                    href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./mediosdepago.html">Medios de pago</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./categorias.html">Categorias</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" href="./vender.html">Vender</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            <nav>
-                <ul class="menu">
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="mediosdepago.html">Medios de pago</a></li>
-                    <li><a href="categorias.html">Categorias</a></li>
-                    <li><a href="#">Vender</a></li>
-                </ul>
-            </nav>
-            <!------------------------------------------------------------------------>
+        </nav>
     </header>
     <main class="mainvender">
-        <section class="vender" data-aos="zoom-out-right"
-        data-aos-easing="linear"
-        data-aos-duration="600">
+        <section class="vender" data-aos="zoom-out-right" data-aos-easing="linear" data-aos-duration="600">
             <form class="formVender" action="" method="post">
                 <h2>Vender</h2>
                 <div class="tituloNFT">
@@ -60,31 +83,32 @@
                     <input class="precioUsd" type="text" placeholder="300$">
                 </div>
                 <div class="tycVender">
-                    <div class="terminos"><p><input type="checkbox" name="" id="" required >Acepto los <a class="TyC" href="https://google.com/"  target="_blank">Terminos y Condiciones</a></p></div>
+                    <div class="terminos">
+                        <p><input type="checkbox" name="" id="" required>Acepto los <a class="TyC"
+                                href="https://google.com/" target="_blank">Terminos y Condiciones</a></p>
+                    </div>
                     <button>Vender NFT</button>
                 </div>
             </form>
         </section>
-        <div class="tycVenderp" data-aos="zoom-in"
-        data-aos-easing="linear"
-        data-aos-duration="600">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tenetur hic odio amet quaerat, maxime sed necessitatibus praesentium. Reprehenderit nam laudantium veniam est porro corporis, repudiandae rerum amet architecto. Voluptates.</p>
+        <div class="tycVenderp" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="600">
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem tenetur hic odio amet quaerat, maxime
+                sed necessitatibus praesentium. Reprehenderit nam laudantium veniam est porro corporis, repudiandae
+                rerum amet architecto. Voluptates.</p>
         </div>
-        <section class="vistaPrevia" data-aos="zoom-out-left"
-        data-aos-easing="linear"
-        data-aos-duration="600">
+        <section class="vistaPrevia" data-aos="zoom-out-left" data-aos-easing="linear" data-aos-duration="600">
             <h2>Vista Previa</h2>
-            <div class="card">
+            <div class="card vistaCard">
                 <img src="../imagenes/f8ac0e_bored-ape-yacht-club_w820.webp.png" width="300px" alt="NFT ape">
                 <h3>Nombre NFT</h3>
                 <div class="contenido">
-    
+
                     <p>Creador: John Smith
                         Preventa: 12/8/2022
                         Precio: 30 BNB</p>
                     <a class="botonNft" href="#">Ver más</a>
                 </div>
-                </div>
+            </div>
     </main>
     <footer class="pie">
         <ul class="listaFooter">
@@ -97,10 +121,15 @@
         <div class="copy">
             <p class="logoabajo">Copyrright 2022 NFTasty</p>
             <a href="../index.html"><img class="logoAbajo" src="../imagenes/Logo.png" alt=""></a>
-            </div>
+        </div>
     </footer>
+    <!--AOS-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init();</script>
+    <!--Boots-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
