--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar p-3 navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img class="logoMenu" src="../imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
+                    <img class="logoMenu" src="./imagenes/Logo.png" alt="Logo" class="d-inline-block align-text-top">
                     <h1 class="text-light">NFTasty</h1>
                 </a>
                 <button class="navbar-toggler btnNav" type="button" data-bs-toggle="offcanvas"
