--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-4 menuUl">
                             <li class="nav-item">
-                                <a class="nav-link active text-light" aria-current="page" href="/index.html">Inicio</a>
+                                <a class="nav-link active text-light" aria-current="page" href="#">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-light" href="./pages/mediosdepago.html">Medios de pago</a>
